--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/4a1b2d16a9.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>EdTech</title>
+    <title>Digital Institute</title>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <!-- Navabr Start -->
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
-                <span>EduTech</span>
+                <span class="fs-3 fw-bold">Digital Institute</span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -43,17 +44,18 @@
                         </li>
                     </ul>
                 </div>
-                <button type="button" class="btn btn-outline-primary">Register</button>
+                <button type="button" class="btn btn-outline-primary d-none d-sm-block">Register</button>
             </div>
         </nav>
         <!-- Navbar End -->
+
         <!-- Carousel Start -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner ">
                 <div class="carousel-item active">
                     <img src="edu-1.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-block d-md-block h-50">
-                        <h1>Get Started Digital Learning</h1>
+                        <h1 class="fw-bold">Get Started Digital Learning</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted
                             by the readable</p>
                         <p class="d-none d-md-block">content of a page when looking at its layout</p>
@@ -63,7 +65,7 @@
                 <div class="carousel-item">
                     <img src="edu-2.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-block d-md-block h-50">
-                        <h1>Get Started Digital Learning</h1>
+                        <h1 class="fw-bold">Get Started Digital Learning</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
                             the readable</p>
                         <p class="d-none d-md-block">content of a page when looking at its layout</p>
@@ -73,7 +75,7 @@
                 <div class="carousel-item">
                     <img src="edu-3.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-block d-md-block h-50">
-                        <h1>Get Started Digital Learning</h1>
+                        <h1 class="fw-bold">Get Started Digital Learning</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
                             the readable</p>
                         <p class="d-none d-md-block">content of a page when looking at its layout</p>
@@ -94,12 +96,13 @@
         </div>
         <!-- Carousel End -->
     </header>
+
     <main>
         <!-- Popular Courses start -->
         <section>
             <div class="text-center">
-                <h1>Discover Our Popular</h1>
-                <h1>Courses</h1>
+                <h1 class="fw-bold">Discover Our Popular</h1>
+                <h1 class="fw-bold">Courses</h1>
                 <p>It is a long established fact that a reader will be distracted
                     by the readable</p>
                 <p>content of a page when looking at its layout</p>
@@ -116,7 +119,7 @@
                                     <h5 class="card-title">Fundamental of UI/UX Design</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
-                                    <p class="card-text">Price:$20</p>
+                                    <p class="card-text text-info fw-bold">Price:$20</p>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +134,7 @@
                                     <h5 class="card-title">Javascript Basic to Advanced</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
-                                    <p class="card-text">Price:$20</p>
+                                    <p class="card-text text-info fw-bold">Price:$20</p>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +149,7 @@
                                     <h5 class="card-title">Fullstack Web Development</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
-                                    <p class="card-text">Price:$20</p>
+                                    <p class="card-text text-info fw-bold">Price:$20</p>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +164,7 @@
                                     <h5 class="card-title">Digital Marketing</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
-                                    <p class="card-text">Price:$20</p>
+                                    <p class="card-text text-info fw-bold">Price:$20</p>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +179,7 @@
                                     <h5 class="card-title">Photography Basic Rules</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
-                                    <p class="card-text">Price:$20</p>
+                                    <p class="card-text text-info fw-bold">Price:$20</p>
                                 </div>
                             </div>
                         </div>
@@ -191,7 +194,7 @@
                                     <h5 class="card-title">Motion Graphics</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
-                                    <p class="card-text">Price:$20</p>
+                                    <p class="card-text text-info fw-bold">Price:$20</p>
                                 </div>
                             </div>
                         </div>
@@ -204,27 +207,28 @@
             </div>
         </section>
         <!-- Popular Courses end -->
+
         <!-- Explore Elearning Institute start -->
         <section class="container my-5">
             <div class=" bg-light bg-gradient container d-flex flex-column flex-sm-row px-0">
                 <img class="img-fluid" src="images/working.png" width=400 alt="">
                 <div class="w-auto my-auto ms-3">
-                    <h1>Explore the elearning</h1>
-                    <h1>Institute</h1>
+                    <h1 class="fw-bold">Explore the elearning</h1>
+                    <h1 class="fw-bold">Institute</h1>
                     <p>A learning system based on formalised teaching but with the help of electronic resources is known
                         as E-learning. While teaching can be based in or out of the classrooms, the use of computers and
                         the Internet forms the major component of E-learning.</p>
                     <div class="d-flex justify-content-between flex-wrap flex-sm-wrap">
                         <div>
-                            <h1>3.2K+</h1>
+                            <h1 class="fw-bold">3.2K+</h1>
                             <p>Online Courses</p>
                         </div>
                         <div>
-                            <h1>600+</h1>
+                            <h1 class="fw-bold">600+</h1>
                             <p>Expert Member</p>
                         </div>
                         <div>
-                            <h1>1K+</h1>
+                            <h1 class="fw-bold">1K+</h1>
                             <p>Rating & Review</p>
                         </div>
                     </div>
@@ -233,11 +237,12 @@
             </div>
         </section>
         <!-- Explore Elearning Institute end -->
+
         <!-- Ready to join start -->
         <section
             class="container py-5 my-3 bg-primary d-flex flex-lg-row flex-sm-column flex-column justify-content-lg-around align-items-center rounded">
             <div class="text-white">
-                <h1>Ready to join</h1>
+                <h1 class="fw-bold">Ready to join</h1>
                 <p>It is a long established fact that a reader will be distracted
                     by the readable</p>
             </div>
@@ -268,11 +273,12 @@
             <!-- Modal end -->
         </section>
         <!-- Ready to join end -->
+
         <!-- Successful Students start -->
         <section class="container">
             <div>
-                <h1>Meet our Successful</h1>
-                <h1>Students</h1>
+                <h1 class="fw-bold">Meet our Successful</h1>
+                <h1 class="fw-bold">Students</h1>
                 <p>It is a long established fact that a reader will be distracted</p>
                 <p>by the readable content of a page when looking at its layout</p>
             </div>
@@ -281,7 +287,7 @@
                     <div class="card border border-light">
                         <img src="images/student/student-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Mark Twain</p>
+                            <p class="card-text fw-bold">Mark Twain</p>
                             <p class="card-text">UIUX Designer</p>
                         </div>
                     </div>
@@ -290,7 +296,7 @@
                     <div class="card border border-light">
                         <img src="images/student/student-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Albert Einstein</p>
+                            <p class="card-text fw-bold">Albert Einstein</p>
                             <p class="card-text">Motion Designer</p>
                         </div>
                     </div>
@@ -299,7 +305,7 @@
                     <div class="card border border-light">
                         <img src="images/student/student-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Isaac Newton</p>
+                            <p class="card-text fw-bold">Isaac Newton</p>
                             <p class="card-text">Graphic Designer</p>
                         </div>
                     </div>
@@ -308,7 +314,7 @@
                     <div class="card border border-light">
                         <img src="images/student/student-4.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Nicola Tesla</p>
+                            <p class="card-text fw-bold">Nicola Tesla</p>
                             <p class="card-text">Web Developer</p>
                         </div>
                     </div>
@@ -319,22 +325,11 @@
             </div>
         </section>
         <!-- Successful Students end -->
-        <!-- Students Feedback start -->
-        <section class="container">
-            <div class="text-center">
-                <h1>Some Students Feedback</h1>
-                <p>It is a long established fact that a reader will be distracted</p>
-                <p>by the readable content of a page when looking at its layout</p>
-            </div>
-            <div>
 
-            </div>
-        </section>
-        <!-- Students Feedback end -->
         <!-- FAQ SECTION start-->
         <section class="container">
             <div class="text-center">
-                <h1>Frequently Asked Questions</h1>
+                <h1 class="fw-bold">Frequently Asked Questions</h1>
                 <p>It is a long established fact that a reader will be distracted</p>
                 <p>by the readable content of a page when looking at its layout</p>
             </div>
@@ -342,7 +337,7 @@
                 id="accordionFlushExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             What are the differences between Flexbox and Grid?
                         </button>
@@ -358,7 +353,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             What are the differences between Tailwind and Bootstrap?
                         </button>
@@ -373,7 +368,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseThree" aria-expanded="false"
                             aria-controls="flush-collapseThree">
                             What is CSS box model?
@@ -390,7 +385,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseThree" aria-expanded="false"
                             aria-controls="flush-collapseThree">
                             What is a semantic tag?
@@ -411,6 +406,7 @@
             </div>
         </section>
         <!-- FAQ SECTION end-->
+
         <!-- Trusted Companies start -->
         <section class="container my-5">
             <div class="d-none d-sm-block d-md-none d-lg-block">
@@ -428,6 +424,22 @@
         <!-- Trusted Companies end -->
     </main>
 
+    <footer class=" container-fluid bg bg-dark py-5">
+        <div class="text-white text-center d-flex flex-column justify-content-center align-items-center">
+            <div class="fw-bold">
+                <h3 class="fw-bold">Digital Institute</h3>
+                <p>Office 41,Zawaya Building,Ghala Muscat</p>
+                <p>Sultanate of Oman</p>
+                <p>Privacy Policy | Terms of Use</p>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/?hl=en"><i class="fa-brands fa-instagram-square"></i></a>
+                <a href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
